--- a/demo-cube/demo-cube.vcxproj
+++ b/demo-cube/demo-cube.vcxproj
@@ -208,6 +208,7 @@
     <None Include="resources\models\suzanne.ply">
       <DeploymentContent>true</DeploymentContent>
     </None>
+    <None Include="resources\models\teapotCGA.bpt" />
     <None Include="resources\simplescene.json">
       <DeploymentContent>true</DeploymentContent>
     </None>
