--- a/demo-cube/demo-cube.vcxproj.filters
+++ b/demo-cube/demo-cube.vcxproj.filters
@@ -42,6 +42,9 @@
     <None Include="resources\models\flat plane.ply">
       <Filter>Resource Files\models</Filter>
     </None>
+    <None Include="resources\models\teapotCGA.bpt">
+      <Filter>Resource Files\models</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\App.h">
