--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -227,6 +227,7 @@
     <ClInclude Include="src\scene\Scalable.h" />
     <ClInclude Include="src\scene\Scene.h" />
     <ClInclude Include="src\scene\SceneApproximation.h" />
+    <ClInclude Include="src\scene\SceneChild.h" />
     <ClInclude Include="src\scene\Skybox.h" />
     <ClInclude Include="src\scene\VisBox.h" />
   </ItemGroup>
@@ -272,6 +273,7 @@
     <ClCompile Include="src\scene\Scalable.cpp" />
     <ClCompile Include="src\scene\Scene.cpp" />
     <ClCompile Include="src\scene\SceneApproximation.cpp" />
+    <ClCompile Include="src\scene\SceneChild.cpp" />
     <ClCompile Include="src\scene\Skybox.cpp" />
     <ClCompile Include="src\scene\VisBox.cpp" />
   </ItemGroup>
